--- a/app/src/main/res/layout/activity_edit_trip.xml
+++ b/app/src/main/res/layout/activity_edit_trip.xml
@@ -8,43 +8,57 @@
     tools:context=".NewTripActivity">
 
 
+    <!--        android:visibility="gone"--><![CDATA[
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/datePicker" />
+
+    ]]><!--        android:visibility="gone"--><![CDATA[
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtEndPoint" />
+
+
+
+
+
+    ]]>
+
     <EditText
         android:id="@+id/timePicker2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="center_vertical"
         android:hint="Pick time"
         android:inputType="textPersonName"
+        android:visibility="gone"
         android:text="@string/timePicker"
         android:textSize="20sp"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePicker" />
+        app:layout_constraintTop_toBottomOf="@+id/datePicker2" />
 
     <EditText
         android:id="@+id/datePicker2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
+        android:visibility="gone"
         android:gravity="center_vertical"
         android:hint="Pick date"
         android:inputType="textPersonName"
         android:text="@string/datePicker"
         android:textSize="20sp"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtEndPoint" />
+        app:layout_constraintTop_toBottomOf="@+id/directionSpinner" />
 
     <EditText
         android:id="@+id/edtTitleNew"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Trip name"
         android:inputType="textPersonName"
@@ -52,7 +66,7 @@
         android:text="@string/edtTitleNew"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,6 +74,7 @@
         android:id="@+id/edtStartPoint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:editable="false"
         android:ems="10"
@@ -75,7 +90,8 @@
         android:id="@+id/edtEndPoint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="End point"
         android:inputType="textPersonName"
@@ -115,8 +131,8 @@
         android:id="@+id/datePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:gravity="center_vertical"
         android:hint="Pick date"
@@ -130,8 +146,8 @@
         android:id="@+id/timePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:gravity="center_vertical"
         android:hint="Pick time"
@@ -156,8 +172,8 @@
 
     <Spinner
         android:id="@+id/repeaterSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="40dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/txtRepeaterSpinner"
         app:layout_constraintEnd_toEndOf="parent"
